--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "mll-lab/laravel-graphql-playground": "^1.1",
-        "nuwave/lighthouse": "^4.5"
+        "nuwave/lighthouse": "^4.5",
+        "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
